debhelper (9.20131228) UNRELEASED; urgency=medium

  * dh_compress: Avoid compressing .map files, which may be html
    usemaps. Closes: #704443
  * dh_installdocs: When doc dirs are symlinked make the dependency
    versioned per policy. Closes: #676777

 -- Joey Hess <joeyh@debian.org>  Sat, 25 Jan 2014 15:49:45 -0400

debhelper (9.20131227) unstable; urgency=medium

  [ Guillem Jover ]
  * dh_shlibdeps: Use new dpkg-shlibdeps -l option instead of LD_LIBRARY_PATH
    Closes: #717505
  * Depend on dpkg-dev (>= 1.17.0), the version that introduced
    dpkg-shlibdeps -l option.

 -- Joey Hess <joeyh@debian.org>  Fri, 27 Dec 2013 21:52:53 -0400

debhelper (9.20131213) unstable; urgency=low

  [ Joey Hess ]
  * cmake: Configure with -DCMAKE_BUILD_TYPE=None
    Closes: #701233

  [ Andreas Beckmann ]
  * dh_installdeb: Add support for dpkg-maintscript-helper commands
    symlink_to_dir and dir_to_symlink that were added in dpkg 1.17.2.
    Closes: #731723

 -- Joey Hess <joeyh@debian.org>  Fri, 13 Dec 2013 14:46:26 -0400

debhelper (9.20131127) unstable; urgency=low

  * dh_compress: Exclude several more compressed file formats.
    Closes: #730483

 -- Joey Hess <joeyh@debian.org>  Wed, 27 Nov 2013 19:19:41 -0400

debhelper (9.20131110) unstable; urgency=low

  * dh_installinit: Revert changes that added versioned dependency on
    sysv-rc to support upstart, which later grew to a versioned dependency
    on sysv-rc | file-rc, and which seems to want to continue growing
    to list other init systems, which there currently seem to be far too
    many of, for far too little benefit.
    The sysv-rc dependency is already met in stable.
    The file-rc dependency is not, so if someone cares about that, they
    need to find a properly designed solution, which this was not.
    Closes: #729248

 -- Joey Hess <joeyh@debian.org>  Sun, 10 Nov 2013 15:23:29 -0400

debhelper (9.20131105) unstable; urgency=low

  * Fix (horrible) make output parsing code to work with make 4.0.