@@ -4,6 +4,8 @@ debhelper (9.20131228) UNRELEASED; urgency=medium
     usemaps. Closes: #704443
   * dh_installdocs: When doc dirs are symlinked make the dependency
     versioned per policy. Closes: #676777
+  * dh_makeshlibs: Defer propigating dpkg-gensymbols error until
+    all packages have been processed. Closes: #736640
 
  -- Joey Hess <joeyh@debian.org>  Sat, 25 Jan 2014 15:49:45 -0400
 
